<resources>
    <string name="app_name">Book market for seller</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="book_name">Book name</string>
    <string name="tag">Tag</string>
    <string name="category">Category</string>
    <string name="quantity">Quantity</string>
    <string name="feature">Feature</string>
    <string name="statistics">Statistics</string>
    <string name="new_book">Add new book</string>
    <string name="detail">detail</string>
    <string name="rate_point">Rate point</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="wellcome_slogan">Wellcome to bookmaket</string>

    <string name="register">Register</string>
    <string name="login">Seller login</string>
    <string name="email">Email</string>
    <string name="don_t_have_account">Don\'t have seller or buyer account?</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="cover">cover</string>
    <string name="author">author</string>
    <string name="name">name</string>
    <string name="number">100</string>
    <string name="textTest">A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart. I am alone, and feel the charm of existence in this spot, which was created for the bliss of souls like mine.
    "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut egestas in ligula a maximus. Mauris venenatis, neque vitae sollicitudin dapibus, dolor lorem tempor orci, eget viverra ante eros non sem. Nam maximus dignissim purus, ac cursus felis. Duis maximus odio nunc, nec dapibus ligula ultricies non. Aliquam efficitur sapien ut nisl aliquet, eget malesuada urna egestas. Nullam sed orci urna. Praesent iaculis dapibus urna, at rutrum ipsum aliquet at. Pellentesque pellentesque augue vel tortor convallis aliquam. Etiam porttitor id urna at dictum. Donec scelerisque auctor quam, id varius ligula. Aliquam eget nibh et urna dapibus vestibulum. Donec mauris ipsum, aliquet ut risus ac, efficitur porta tortor. Donec ac libero ut leo lobortis elementum. Nunc commodo metus nunc.\nPhasellus iaculis nisi a leo vehicula sodales. Fusce hendrerit quam eget tortor semper ultrices. Vivamus rhoncus molestie massa et volutpat. Proin cursus ex ac diam ornare consectetur. Curabitur vitae congue lectus. Pellentesque a purus fermentum, varius est vel, faucibus risus. Nullam vitae massa vitae diam fermentum condimentum vitae a sem. Etiam eu lorem a libero sollicitudin placerat.\nDuis sodales imperdiet quam, vitae laoreet ex fermentum non. Vivamus convallis magna in justo laoreet, a ornare enim sollicitudin. Nam laoreet neque eu tempus commodo. In sollicitudin enim sit amet rutrum posuere. Integer mattis aliquet posuere. Integer blandit mauris vel erat molestie faucibus. Ut non urna in urna interdum venenatis non sit amet urna. In ornare posuere risus et vestibulum."

    </string>
    <string-array name="status">
        <item>WAITING</item>
        <item>CONFIRMED</item>
        <item>DELIVERING</item>
        <item>COMPLETE</item>
    </string-array>
    <string-array name="kind">
        <item>Comic</item>
        <item>Fiction</item>
        <item>Novel</item>
        <item>Business</item>
        <item>Technology</item>
        <item>Art</item>
    </string-array>
    <string name="fiction"> Fiction </string>
    <string name="profile">Profile</string>
    <string name="editprofile">Update Profile</string>
    <string name="Feature">Feature</string>
    <string name="your_location">Your location</string>
    <string name="search_book">Search Books</string>

    <string name="categories">Categories</string>
    <string name="featured">Featured</string>
    <string name="see_all">See all</string>
    <string name="more">More</string>

    <string name="shop_now">Shop now</string>
    <string name="price_format_vn">%s VND</string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>

    </string-array>
    <string name="title_activity_login">LoginActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_function">All function</string>
    <string name="already_have_an_account">Already have an seller or buyer account ?</string>
</resources>