<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="Pages">
        <menu>
            <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/menu_home" />
            <item
                android:id="@+id/nav_statistic"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/statistics" />
        </menu>
        </item>
    </group>

    <group android:checkableBehavior="single">
        <item android:title="Action">
            <menu>
                <item android:title="@string/new_book"
                    android:id="@+id/nav_detail"/>
            </menu>
        </item>
    </group>
</menu>