<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        style="@style/Theme.MaterialComponents.DayNight.NoActionBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.login.LoginActivity">

        <TextView
            android:id="@+id/label"
            style="@style/tv_28_bold"
            android:textSize="40sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="70dp"
            android:text="@string/login"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:contentDescription="login-image"
            android:src="@drawable/admin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label" />

        <LinearLayout
            android:id="@+id/formLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/email"
                    android:src="@drawable/ic_email" />

                <TextView
                    android:id="@+id/tv_email"
                    style="@style/tv_14_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/email" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/LoginEmailLayout"
                android:layout_marginTop="-15dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:paddingLeft="-15dp"
                android:textAlignment="viewStart"
                app:endIconMode="clear_text"
                android:gravity="start">

                <EditText
                    android:id="@+id/LoginEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/email"
                    android:background="@android:color/transparent"
                    android:inputType="textEmailAddress"
                    app:layout_constraintEnd_toEndOf="parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="padlock"
                    android:src="@drawable/ic_padlock" />

                <TextView
                    android:id="@+id/tv_password"
                    style="@style/tv_14_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:paddingTop="2dp"
                    android:text="Password" />
            </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/LoginPasswordLayout"
                android:layout_marginTop="-18dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:paddingLeft="-15dp"
                android:textAlignment="viewStart"
                app:endIconMode="password_toggle"
                app:counterMaxLength="20"
                app:counterEnabled="true"
                android:gravity="start">

                <EditText
                    android:id="@+id/LoginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:inputType="textPassword"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

    <TextView
        android:id="@+id/resetPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Reset password"
        android:textSize="12sp"
        android:textColor="@color/blue_light"
        android:paddingBottom="10dp"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/formLogin">

    </TextView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginButton"
            style="@style/btn_blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_button_gradient"
            android:elevation="12dp"
            android:fontFamily="@font/roboto_medium"
            android:shadowRadius="8"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/formLogin" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton">

        <TextView
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_account" />

        <TextView
            android:id="@+id/LoginSignUp"
            android:textStyle="bold"
            android:textColor="@color/blue_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            android:text="@string/register" />

    </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>